Updates Dockerfile for a more optimized image

--- a/extractor/Dockerfile
+++ b/extractor/Dockerfile
@@ -1,7 +1,30 @@
-FROM python:3.12-alpine AS final
+FROM python:3.12-alpine AS build
 
 RUN apk upgrade; \
-    apk add tini gcc python3-dev libc-dev; \
+    apk add gcc python3-dev libc-dev; \
+    addgroup -g 9999 app; \
+    adduser -G app -u 9999 -D app; \
+    mkdir /wheels; \
+    chown app:app /wheels; \
+    rm -rf /tmp/**; \
+    rm -rf /var/cache/apk/**;
+
+WORKDIR /wheels
+USER app
+
+COPY --chown=app:app requirements.txt .
+
+RUN pip wheel -r requirements.txt; \
+    rm requirements.txt;
+
+
+FROM python:3.12-alpine AS final
+
+LABEL org.opencontainers.image.title="Optimizely Demo (Extractor)"
+LABEL org.opencontainers.image.authors="xoxo@saifmahmud.name"
+
+RUN apk upgrade; \
+    apk add tini; \
     addgroup -g 9999 app; \
     adduser -G app -u 9999 -D app; \
     mkdir /app; \
@@ -12,22 +35,12 @@ RUN apk upgrade; \
 WORKDIR /app
 USER app
 
-COPY --chown=app:app requirements.txt .
-RUN pip install -r requirements.txt
-
-USER root
-
-RUN apk delete gcc python3-dev libc-dev; \
-    rm -rf /tmp/**; \
-    rm -rf /var/cache/apk/**;
-
-USER app
 COPY --chown=app:app . .
 
-LABEL org.opencontainers.image.title="Optimizely Demo (Extractor)"
-LABEL org.opencontainers.image.authors="xoxo@saifmahmud.name"
+RUN --mount=type=bind,from=build,source=/wheels,target=/wheels \
+    pip install --no-cache-dir -r requirements.txt -f /wheels;
 
 STOPSIGNAL SIGINT
 
-ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000"]
+ENTRYPOINT ["/sbin/tini", "--", "python"]
+CMD ["-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000"]
